# Cytologick

./: .gitignore  .pre-commit-config.yaml  CITATION.md  CONTRIBUTING.md  LICENSE  README.md  __mrx_to_xml.py  __print_structure.py  __run_whole_slide.py  ai_tools.py  annotation_example.xml  config.example.yaml  config.py  get_dataset.py  get_metadata.py  get_xmls.py  get_xmls_svs.py  gui.py  inference.py  model_audit.py  model_convert.py  model_new.py  model_test.py  model_train.py  new_model.py  parse_mrsx.py  parse_slide.py  parse_xml.py  pytest.ini  requirements-dev.txt  requirements-pytorch.txt  requirements-tensorflow.txt  requirements.txt  requirements_temp.txt  run.py  run.spec  run_audit.py  run_web.py  run _web.py  slide_bulk.py  (+7 more)
.github/workflows/: build-cpp.yml
__nginx/: nginx.conf
__web/: __get_slide_roi.py  deepzoom_server.py  start_web.py
__web/static/css/: globals.css  style.css  styleguide.css
__web/static/screens/preview/: globals.css  style.css
__web/templates/: menu.html  slide-multipane.html
clogic/: __init__.py  ai.py  ai_pytorch.py  contours.py  graphics.py  gui.py  inference.py  inference_pytorch.py  inference_utils.py  model_audit.py  model_loading.py  preprocessing_pytorch.py  smooth.py
cpp/: CMakeLists.txt  README.md  vcpkg.json
cpp/resources/: cytologick.qrc
cpp/scripts/: export_onnx.py
cpp/src/: annotation_overlay.cpp  annotation_overlay.h  config.cpp  config.h  graphics.cpp  graphics.h  inference.cpp  inference.h  main.cpp  mainwindow.cpp  mainwindow.h  menuwindow.cpp  menuwindow.h  previewwindow.cpp  previewwindow.h  slidereader.cpp  slidereader.h  workingdir_prefs.cpp  workingdir_prefs.h
cpp/src/annotator/: annotation_io.cpp  annotation_io.h  annotation_types.h  main.cpp  menuwindow.cpp  menuwindow.h  window.cpp  window.h
demetra/: ai.py  contours.py  graphics.py  gui.py  inference.py
parsers/: helpers.py  mrsx.py  xml.py
previous/: __run_whole_slide.py  __sanity_check.py  slide_single.py
tests/: README.md  __init__.py  conftest.py  requirements_test.txt  test_framework_selection.py  test_gui_pytorch.py  test_integration.py  test_preprocessing_consistency.py  test_pytorch_inference.py  test_pytorch_training.py
tfs_connector/: __init__.py  classification.py  functions.py  image_manipulation.py  kmp_duplicate_lib_decorator.py  metadata.py  model_urls.py  parallelism_mode.py  resize_options.py  segmentation.py  setup.py  smooth_tiling_segmentation.py  test_functions.py  tf_serving_metadata_example.json
tfs_connector/metrics/: __init__.py  metrics.py
tfs_connector/tensorflow_layer/: __init__.py  tensorflow_layer.py
